--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "django-rest-framework>=0.1.0",
     "dotenv>=0.9.9",
     "drf-spectacular>=0.29.0",
+    "gunicorn>=23.0.0",
     "pillow>=12.0.0",
     "psycopg2-binary>=2.9.11",
     "pyjwt>=2.10.1",
