--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,6 @@ dependencies = [
     "pillow>=12.0.0",
     "psycopg2-binary>=2.9.11",
     "pyjwt>=2.10.1",
+    "requests>=2.32.5",
     "tqdm>=4.67.1",
 ]
