--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ dependencies = [
     "daphne>=4.2.1",
     "django>=6.0",
     "django-cors-headers>=4.9.0",
-    "django-phonenumber-field[phonenumbers]>=8.4.0",
     "django-rest-framework>=0.1.0",
     "dotenv>=0.9.9",
     "drf-spectacular>=0.29.0",
+    "google-auth>=2.43.0",
+    "google-auth-oauthlib>=1.2.2",
     "gunicorn>=23.0.0",
     "pillow>=12.0.0",
     "psycopg2-binary>=2.9.11",
