--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "daphne>=4.2.1",
     "django>=6.0",
     "django-cors-headers>=4.9.0",
+    "django-filter>=25.2",
     "django-rest-framework>=0.1.0",
     "dotenv>=0.9.9",
     "drf-spectacular>=0.29.0",
